--- a/themes/noteworthy/layouts/partials/head.html
+++ b/themes/noteworthy/layouts/partials/head.html
@@ -13,6 +13,16 @@
     <link rel="mask-icon" href="{{ "safari-pinned-tab.svg" | relURL }}" color="#FF3DB4">
     <meta name="theme-color" content="#ffffff">
 
+    <!-- Google tag (gtag.js) -->
+     <script async src="https://www.googletagmanager.com/gtag/js?id=G-813GH0XF8X"></script>
+     <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+     
+     gtag('config', 'G-813GH0XF8X');
+     </script>
+
     <!-- Styles -->
     <!-- Use Hugo Pipes to process the Sass file (convert to CSS, minify, and add a hash) -->
     {{ $main_style := resources.Get "css/main.scss" | toCSS | minify | fingerprint }}
@@ -33,3 +43,4 @@
       {{ template "_internal/google_analytics.html" . }}
     {{ end }}
 </head>
+1
